--- a/EmployeePayRoleSystem/src/main/resources/application.properties
+++ b/EmployeePayRoleSystem/src/main/resources/application.properties
@@ -1,21 +1,4 @@
 spring.application.name=EmployeePayRoleSystem
 
-spring.mvc.view.prefix=/WEB-INF/pages/
-spring.mvc.view.suffix=.jsp
-
-
-
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
-spring.datasource.username=system
-spring.datasource.password=tiger
-
-#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
-#spring.datasource.username=keerti
-#spring.datasource.password=Happy3363
-
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.profiles.active=dev
 
